# furnace

./: BENCHMARK_GUIDE.md  BENCHMARK_REALITY_CHECK.md  BENCHMARK_SUMMARY.md  Cargo.toml  GETTING_STARTED.md  GUIDE.md  HOW_IT_WORKS.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_START_SCHEMA_BUILDER.md  README.md  SCHEMA_BUILDER.md  USAGE_GUIDE.md  benchmark_results.txt  root.jsonl  root_posts.jsonl  root_posts_tags.jsonl  tidy-data-principles.md
benchmarks/python/: README.md  requirements.txt
benchmarks/python/benchmarking/: benchmark.py  profile.py
benchmarks/python/lib/: generate_examples.py  infer_schema.py
docs/: README.md  SCHEMA_INFERENCE.md  generate_charts.py  generate_performance_graphs.py
examples/: api_example.rs  api_pagination.rs  quickstart.rs  schema_builder_usage.rs  schema_comparison.rs  schema_performance.rs
schema_inference/: OPTIMIZATION_CYCLE_3.md  OPTIMIZATION_LOG.md  OPTIMIZATION_SUCCESS.md  PERFORMANCE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  RUST_OPTIMIZATION_LOG.md  generate_performance_graphs.py
schema_inference/src/lib/: fetch_schemas.py
schema_inference/src/tests/: test_inference.py  test_integration.py
src/: extractor.rs  lib.rs  writer.rs
src/melt/: extractor.rs  mod.rs  plan.rs  planned_extractor.rs  types.rs  writer.rs
src/schema/: builder.rs  inference.rs  mod.rs
tests/schema_examples/: manifest.json
tests/schema_examples/.NET_Aspire_8.0_Manifest/: schema.json  schema_with_examples.json
tests/schema_examples/.adonisrc.json/: schema.json
tests/schema_examples/.agripparc.json/: schema.json  schema_with_examples.json
(+187 files in other folders)
