[package]
name = "furnace"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
genson-rs = "0.2.0"
simd-json = "0.13"
regex = "1.10"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "furnace-melt"
path = "src/bin/furnace_melt.rs"

[[bin]]
name = "furnace-infer"
path = "src/bin/furnace_infer.rs"
